# automate

./: Dockerfile  README.md  entrypoint.sh  first.yml  hello.py  pyproject.toml  test_main.py
.github/actions/mi-action/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: artifact.yml  build.yml  challenge.yml  challenge1.yml  cicd.yml  custom.yml  env-variables.yml  first-repo.yml  idocker.yml  main.yml  marketplace.yml  pipe.yml  pipeline.yml  python-app.yml  python_ci.yml  secret.yml
mi_app/: __init__.py  main.py
src/app/: 100daysofcode.py
src/mi_app/: __init__.py
tests/: main.py  test_app.py  test_main.py
tests/mi_app/: __init__.py  app.py
