[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mi_app"
version = "0.0.1"
authors = [
  { name="Tu Nombre", email="tu.email@ejemplo.com" },
]
description = "Un paquete de ejemplo."
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"] # Le dice a setuptools que busque paquetes en la carpeta 'src'
